# esp32-relay-controller

./: .gitignore  Cargo.toml  README.md  flake.nix
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  config.rs  error.rs  main.rs
crates/esp-test/: Cargo.toml
crates/esp-test/src/: main.rs
crates/nvs/: Cargo.toml
crates/nvs/src/: error.rs  lib.rs
crates/relay-controller/: Cargo.toml  partitions-esp32s3-ota.csv  sdkconfig.defaults
crates/relay-controller/.cargo/: config.toml
crates/relay-controller/src/: config.rs  error.rs  main.rs  ota.rs  plan9.rs  relay.rs  server.rs  wifi.rs
flake-parts/: cargo.nix  rust-toolchain.nix  shells.nix
flake-parts/esp/: rust-src.nix
