[dependencies]
aes = "0.8"
clap = { version = "4", features = ["derive"] }
crc = "3.3"
heapless = "0.8"
nvs-writer = { path = "../nvs" }
rand = "0.9"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xts-mode = "0.5"
zerocopy = "0.6"

[lints]
workspace = true

[package]
name = "cli"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
